@@ -1,5 +1,6 @@
 2.2.1 Released ?? 2014
 
+* Add function AddRange(char dir, mreal v1, mreal v2) and extend corresponding MGL commands '[xyzc]range'
 * Allow nx=1 for Stem and Error
 * Bugfix for drawing single axis
 * Bugfix for missing options parsing for some of MGL commands
